applications/intelliflow/ifs-gateway-svc/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ifs-gateway-svc
  namespace: control-plane
  labels:
    app: ifs-gateway-svc
    domain: control-plane
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ifs-gateway-svc
  template:
    metadata:
      labels:
        app: ifs-gateway-svc
    spec:
      containers:
      - name: ifs-gateway-svc
        image: intelliflow/ifs-gateway-svc:colo
        imagePullPolicy: Always
        ports:
        - containerPort: 31703
